Fixed issue with overflowing content

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     background-image: linear-gradient(#271F47 39%, #2E2E2E 96%);
     background-size: cover;
     width: auto;
+    overflow-x: hidden;
 }
 
 .main-container {
@@ -46,6 +47,7 @@ body {
     height: 300rem;
     background-size: cover;
     width: auto;
+    overflow-x: hidden;
 }
 
 .line {
